fix right shift problem of buttons to the left

--- a/css/hux-blog.css
+++ b/css/hux-blog.css
@@ -190,7 +190,7 @@ pre code {
 @media screen and (max-width: 500px) {
   .post-container ul,
   .post-container ol {
-    padding-left: 20px;
+    /*padding-left: 20px;*/
   }
 }
 .post-container ol ol,
